Fix missing partial, fix alignment on employer applicaiton page

--- a/app/assets/stylesheets/employer.scss
+++ b/app/assets/stylesheets/employer.scss
@@ -1,7 +1,12 @@
-.employer-applicaiton {
-  .section {
+#employer-application {
+  span.section {
     font-size: 1.2em;      
     font-weight: bold;
+    color: rgb(175, 175, 175);
+  }
+
+  h1, h2, h3, h4, h5, h6 {
+    margin: 0px; 
   }
 }
 
@@ -15,10 +20,12 @@
   .staffer-email {
     color: rgb(175, 175, 175); 
     font-size: 1.0em;
+    font-family: "Georgia"
   } 
   .staffer-phone {
     color: rgb(175, 175, 175); 
     font-size: 1.0em;
+    font-family: "Georgia"
   } 
   .staffer-quote {
     color: rgb(100, 100, 100); 
